--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
+    "react-fontawesome": "^1.7.1",
+    "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
     "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.7.1"
