--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
+    "react-ga": "^2.7.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
     "react-twitter-embed": "^3.0.3",
