--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ga": "^2.7.0",
     "react-moment": "^0.9.7",
     "react-scripts": "3.4.1",
+    "react-scroll-up": "^1.3.3",
     "react-twitter-embed": "^3.0.3",
     "react-twitter-widgets": "^1.7.1"
   },
