--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "infinite-react-carousel": "^1.2.11",
     "mdbreact": "^4.25.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
@@ -16,7 +17,10 @@
     "react-dom": "^16.13.1",
     "react-fontawesome": "^1.7.1",
     "react-ga": "^2.7.0",
+    "react-history": "^0.18.2",
     "react-moment": "^0.9.7",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll-up": "^1.3.3",
     "react-twitter-embed": "^3.0.3",
