--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.13.26",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,6 +14,8 @@
     "mdbreact": "^4.25.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "prismic-reactjs": "^1.3.0",
+    "pure-react-carousel": "^1.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
