--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@brainhubeu/react-carousel": "^1.13.26",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,6 +16,7 @@
     "mdbreact": "^4.25.5",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "mui-datatables": "^2.14.0",
     "prismic-reactjs": "^1.3.0",
     "pure-react-carousel": "^1.27.0",
     "react": "^16.13.1",
@@ -23,6 +26,7 @@
     "react-ga": "^2.7.0",
     "react-history": "^0.18.2",
     "react-moment": "^0.9.7",
+    "react-multi-carousel": "^2.5.5",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
